<resources>
    <string name="app_name">SignUpIn</string>
    <string name="username">Username</string>
    <string name="password_verification">Password Verification</string>
    <string name="displayName">Name</string>
    <string name="password">Password</string>
    <string name="type">type a message</string>
    <string name="profile_name">mcgregor</string>
    <string name="send_button_description">send message</string>
    <string name="BaseUrl">http://10.0.2.2:12345/</string>
    <string name="enter_server_address">Enter New Server Address</string>
    <string name="confirm">Confirm</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="enter_an_id_for_contact">enter an ID for contact</string>
</resources>
