<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity">

    <EditText
            android:id="@+id/editServerAddress"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/enter_server_address"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/btnChangeTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/btnConfirmPortChange"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editServerAddress"/>

    <Button
            android:id="@+id/btnChangeTheme"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:text="@string/change_app_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
