<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/signUpBackground"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".SignUpActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="settings screen pivot"
            android:src="@drawable/ic_settings"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:layout_marginBottom="80dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="454dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/lightGrey"
                android:textColorHint="@color/chatBackground">

        </EditText>

        <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/lightGrey"
                android:textColorHint="@color/chatBackground">

        </EditText>

        <EditText
                android:id="@+id/txtPasswordVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_verification"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/lightGrey"
                android:textColorHint="@color/chatBackground">

        </EditText>

        <EditText
                android:id="@+id/txtDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/displayName"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/lightGrey"
                android:textColorHint="@color/chatBackground">

        </EditText>

        <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="uploadProfilePicture"
                android:src="@drawable/default_profile_picture"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Press to add profile picture"
                android:textColor="@android:color/darker_gray"/>

        <Button
                android:id="@+id/btnSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:padding="15dp"
                android:text="Sign up"
                android:textAllCaps="false"
                android:onClick="signUp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="goToLoginActivity"
                android:text="Already signed in? "
                android:textColor="@android:color/darker_gray"/>


    </LinearLayout>


</LinearLayout>